Looked at the LiChess API and saw how they calcuated "winning chances." Thought it would be good to add - next, going to update the time pressure function, to instead calcualte it as a % of time

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +185,18 @@
     "    elif eval_change >= 50:\n",
     "        return \"Good Move\"\n",
     "    else:\n",
-    "        return \"Normal\"\n"
+    "        return \"Normal\"\n",
+    "    \n",
+    "def debug_data_pipeline(df, label):\n",
+    "    # Function definition here\n",
+    "    logging.info(f\"Debugging {label}\")\n",
+    "    # Process the DataFrame or print logs for debugging\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +612,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Fetching games for user 'teoeo'...\n"
+      "INFO: Fetching games for user 'teoeo'...\n",
+      "INFO: Fetched 981 games with evaluations for user 'teoeo'.\n",
+      "INFO: Fetching games for user 'Tobermorey'...\n",
+      "INFO: Fetched 76 games with evaluations for user 'Tobermorey'.\n",
+      "INFO: Fetching games for user 'apostatlet'...\n",
+      "INFO: Fetched 221 games with evaluations for user 'apostatlet'.\n",
+      "INFO: Fetching games for user 'LovePump1000'...\n",
+      "INFO: Fetched 391 games with evaluations for user 'LovePump1000'.\n",
+      "INFO: Fetching games for user 'Stuntmanandy'...\n",
+      "INFO: Fetched 816 games with evaluations for user 'Stuntmanandy'.\n",
+      "INFO: Fetching games for user 'Banfy_B'...\n",
+      "WARNING: Failed to fetch games for user 'Banfy_B'. Status code: 404\n",
+      "INFO: Fetching games for user 'ChessyChesterton12'...\n",
+      "INFO: Fetched 228 games with evaluations for user 'ChessyChesterton12'.\n",
+      "INFO: Fetching games for user 'Yastoon'...\n",
+      "INFO: Fetched 24 games with evaluations for user 'Yastoon'.\n",
+      "INFO: Fetching games for user 'Timy1976'...\n",
+      "WARNING: Failed to fetch games for user 'Timy1976'. Status code: 404\n",
+      "INFO: Fetching games for user 'SonnyDayz11'...\n",
+      "INFO: Fetched 16 games with evaluations for user 'SonnyDayz11'.\n",
+      "INFO: Fetching games for user 'xiroir'...\n",
+      "INFO: Fetched 104 games with evaluations for user 'xiroir'.\n",
+      "INFO: Initialized Stockfish engine at '/opt/homebrew/bin/stockfish'.\n",
+      "INFO: Processing ADHD players' games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing ADHD games: 100%|██████████| 2857/2857 [00:03<00:00, 802.14it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'debug_data_pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcessing ADHD players\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m games...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m adhd_moves_df \u001b[38;5;241m=\u001b[39m process_games(adhd_games, group_label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mADHD\u001b[39m\u001b[38;5;124m'\u001b[39m, engine\u001b[38;5;241m=\u001b[39mengine)\n\u001b[0;32m---> 28\u001b[0m \u001b[43mdebug_data_pipeline\u001b[49m(adhd_moves_df, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mADHD GAMES PROCESSING\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# ----------------------- 3. Fetch and Process General Population Games -----------------------\u001b[39;00m\n\u001b[1;32m     32\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFetching general population games...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'debug_data_pipeline' is not defined"
      ]
     }
    ],
@@ -816,7 +863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
