--- a/Main.ipynb
+++ b/Main.ipynb
@@ -642,18 +642,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games: 100%|██████████| 2857/2857 [00:03<00:00, 802.14it/s]\n"
+      "Processing ADHD games: 100%|██████████| 2857/2857 [00:03<00:00, 808.45it/s]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'debug_data_pipeline' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcessing ADHD players\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m games...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m adhd_moves_df \u001b[38;5;241m=\u001b[39m process_games(adhd_games, group_label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mADHD\u001b[39m\u001b[38;5;124m'\u001b[39m, engine\u001b[38;5;241m=\u001b[39mengine)\n\u001b[0;32m---> 28\u001b[0m \u001b[43mdebug_data_pipeline\u001b[49m(adhd_moves_df, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mADHD GAMES PROCESSING\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# ----------------------- 3. Fetch and Process General Population Games -----------------------\u001b[39;00m\n\u001b[1;32m     32\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFetching general population games...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'debug_data_pipeline' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging ADHD GAMES PROCESSING\n",
+      "INFO: Fetching general population games...\n",
+      "ERROR: PGN file not found at path: /Users/benjaminrosales/Desktop/Chess Study/Comparison Games/lichess_db_standard_rated_2017-05.pgn\n",
+      "WARNING: No General population games to process.\n",
+      "INFO: Combining datasets...\n",
+      "INFO: Debugging COMBINED DATASET\n",
+      "INFO: Cleaning data...\n",
+      "INFO: Total number of moves after cleaning: 86292\n",
+      "INFO: Performing statistical tests...\n",
+      "INFO: Generating plots and performing statistical tests...\n"
      ]
     }
    ],
@@ -746,9 +751,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2456860323.py, line 84)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 84\u001b[0;36m\u001b[0m\n\u001b[0;31m    logging.info(\"\\n----------------------- Statistical Test Results -----------------------\\n\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "#%%\n",
     "import matplotlib.pyplot as plt\n",
