--- a/Main.ipynb
+++ b/Main.ipynb
@@ -22,6 +22,7 @@
     "import chess.engine\n",
     "import sys\n",
     "import logging\n",
+    "import math\n",
     "\n",
     "# Configure logging to print to stdout\n",
     "logging.basicConfig(\n",
@@ -32,7 +33,8 @@
     "sns.set(style=\"whitegrid\")\n",
     "\n",
     "# Replace with the actual path to your general population PGN file\n",
-    "GENERAL_PGN_FILE_PATH = \"/Users/benjaminrosales/Desktop/Chess Study/Comparison Games/lichess_db_standard_rated_2017-05.pgn\"\n",
+    "# Replace with the actual path to your general population PGN file\n",
+    "GENERAL_PGN_FILE_PATH = \"/Users/benjaminrosales/Desktop/Chess Study Materials & Data/Comparison Games/lichess_db_standard_rated_2017-05.pgn\"\n",
     "\n",
     "# Path to your Stockfish executable\n",
     "STOCKFISH_PATH = \"/opt/homebrew/bin/stockfish\"\n",
@@ -84,15 +86,14 @@
     "\n",
     "\n",
     "def parse_evaluation(comment):\n",
-    "    # Extract evaluation from comment, e.g., \"%eval 0.34\"\n",
-    "    match = re.search(r\"%eval\\s+([+-]?[0-9]+(\\.[0-9]+)?|#-?[0-9]+)\", comment)\n",
+    "    # Extract evaluation from comment, e.g., \"%eval 0.34\" or \"%eval #5\"\n",
+    "    match = re.search(r\"%eval\\s+([+-]?([0-9]+(\\.[0-9]+)?)|#[+-]?[0-9]+)\", comment)\n",
     "    if match:\n",
     "        eval_str = match.group(1)\n",
-    "        if \"#\" in eval_str:\n",
-    "            # Mate in N moves\n",
-    "            return None\n",
-    "        else:\n",
-    "            return float(eval_str)\n",
+    "        return eval_str\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
     "\n",
     "def categorize_error(eval_change):\n",
     "    if eval_change is None:\n",
@@ -121,7 +122,7 @@
     "    for piece_type in piece_values:\n",
     "        value = piece_values[piece_type]\n",
     "        material[\"White\"] += len(board.pieces(piece_type, chess.WHITE)) * value\n",
-    "        material[\"Black\"] += len(board.pieces(piece_type, chess.BLACK)) * value\n",
+    "        material[\"Black\"] += len(board.pieces(piece_type, chess.BLACK)) * values\n",
     "    return material\n",
     "\n",
     "\n",
@@ -191,6 +192,39 @@
     "    # Function definition here\n",
     "    logging.info(f\"Debugging {label}\")\n",
     "    # Process the DataFrame or print logs for debugging\n",
+    "\n",
+    "import math  # Ensure math module is imported\n",
+    "\n",
+    "def raw_winning_chances(cp):\n",
+    "    MULTIPLIER = -0.00368208\n",
+    "    return 2 / (1 + math.exp(MULTIPLIER * cp)) - 1\n",
+    "\n",
+    "def cp_winning_chances(cp):\n",
+    "    cp = max(-1000, min(cp, 1000))\n",
+    "    return raw_winning_chances(cp)\n",
+    "\n",
+    "def mate_winning_chances(mate):\n",
+    "    cp = (21 - min(10, abs(mate))) * 100\n",
+    "    signed_cp = cp * (1 if mate > 0 else -1)\n",
+    "    return raw_winning_chances(signed_cp)\n",
+    "\n",
+    "def eval_winning_chances(eval_str):\n",
+    "    if eval_str is None:\n",
+    "        return None\n",
+    "    if '#' in eval_str:\n",
+    "        # Mate in N moves\n",
+    "        mate_str = eval_str.replace('#', '')\n",
+    "        try:\n",
+    "            mate = int(mate_str)\n",
+    "            return mate_winning_chances(mate)\n",
+    "        except ValueError:\n",
+    "            return None\n",
+    "    else:\n",
+    "        try:\n",
+    "            cp = float(eval_str) * 100  # Convert from pawns to centipawns\n",
+    "            return cp_winning_chances(cp)\n",
+    "        except ValueError:\n",
+    "            return None\n",
     "\n"
    ]
   },
@@ -445,6 +479,8 @@
     "                    \"TimeSpent\": time_spent,\n",
     "                    \"Evaluation\": eval,\n",
     "                    \"EvalChange\": eval_change,\n",
+    "                    \"WinningChances\": winning_chances,\n",
+    "                    \"WinningChancesChange\": winning_chances_change,\n",
     "                    \"UnderTimePressure\": time_remaining is not None\n",
     "                    and time_remaining < 20,\n",
     "                    \"Group\": group_label,\n",
@@ -493,6 +529,7 @@
     "            prev_eval = None\n",
     "            current_material = calculate_material(board)\n",
     "            prev_time_remaining = None  # Initialize before the loop\n",
+    "            prev_winning_chances = None  # Track the winning chances from the previous move\n",
     "\n",
     "            # Check if the game has evaluations\n",
     "            has_evaluation = False\n",
@@ -520,12 +557,22 @@
     "                time_remaining = parse_clock_time(comment)\n",
     "                eval = parse_evaluation(comment)\n",
     "\n",
+    "                # Calculate winning chances\n",
+    "                winning_chances = eval_winning_chances(eval)\n",
+    "\n",
+    "                # Calculate winning chances change\n",
+    "                if prev_winning_chances is not None and winning_chances is not None:\n",
+    "                    winning_chances_change = winning_chances - prev_winning_chances\n",
+    "                else:\n",
+    "                    winning_chances_change = None\n",
+    "\n",
     "                # Skip moves without evaluations\n",
     "                if eval is None:\n",
     "                    board.push(move)\n",
     "                    node = next_node\n",
     "                    prev_time_remaining = time_remaining\n",
     "                    current_material = calculate_material(board)\n",
+    "                    prev_winning_chances = winning_chances\n",
     "                    continue\n",
     "\n",
     "                # Apply the move to the board\n",
@@ -581,8 +628,9 @@
     "                    \"TimeSpent\": time_spent,\n",
     "                    \"Evaluation\": eval,\n",
     "                    \"EvalChange\": eval_change,\n",
-    "                    \"UnderTimePressure\": time_remaining is not None\n",
-    "                    and time_remaining < 20,\n",
+    "                    \"WinningChances\": winning_chances,\n",
+    "                    \"WinningChancesChange\": winning_chances_change,\n",
+    "                    \"UnderTimePressure\": time_remaining is not None and time_remaining < 20,\n",
     "                    \"Group\": group_label,\n",
     "                    \"ErrorCategory\": error_category,\n",
     "                    \"IsSacrifice\": is_sacrifice,\n",
@@ -596,6 +644,7 @@
     "                prev_eval = eval\n",
     "                prev_time_remaining = time_remaining\n",
     "                current_material = new_material\n",
+    "                prev_winning_chances = winning_chances\n",
     "                node = next_node\n",
     "        except Exception as e:\n",
     "            logging.error(f\"Error processing game: {e}\")\n",
@@ -615,9 +664,9 @@
       "INFO: Fetching games for user 'teoeo'...\n",
       "INFO: Fetched 981 games with evaluations for user 'teoeo'.\n",
       "INFO: Fetching games for user 'Tobermorey'...\n",
-      "INFO: Fetched 76 games with evaluations for user 'Tobermorey'.\n",
+      "INFO: Fetched 75 games with evaluations for user 'Tobermorey'.\n",
       "INFO: Fetching games for user 'apostatlet'...\n",
-      "INFO: Fetched 221 games with evaluations for user 'apostatlet'.\n",
+      "INFO: Fetched 219 games with evaluations for user 'apostatlet'.\n",
       "INFO: Fetching games for user 'LovePump1000'...\n",
       "INFO: Fetched 391 games with evaluations for user 'LovePump1000'.\n",
       "INFO: Fetching games for user 'Stuntmanandy'...\n",
@@ -642,7 +691,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games: 100%|██████████| 2857/2857 [00:03<00:00, 808.45it/s]\n"
+      "Processing ADHD games: 100%|██████████| 2854/2854 [00:03<00:00, 796.25it/s]\n"
      ]
     },
     {
@@ -651,12 +700,26 @@
      "text": [
       "INFO: Debugging ADHD GAMES PROCESSING\n",
       "INFO: Fetching general population games...\n",
-      "ERROR: PGN file not found at path: /Users/benjaminrosales/Desktop/Chess Study/Comparison Games/lichess_db_standard_rated_2017-05.pgn\n",
-      "WARNING: No General population games to process.\n",
+      "INFO: Successfully read 2000 games with evaluations from PGN file '/Users/benjaminrosales/Desktop/Chess Study Materials & Data/Comparison Games/lichess_db_standard_rated_2017-05.pgn'.\n",
+      "INFO: Processing general population games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing General games: 100%|██████████| 2000/2000 [00:02<00:00, 820.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging GENERAL GAMES PROCESSING\n",
       "INFO: Combining datasets...\n",
       "INFO: Debugging COMBINED DATASET\n",
       "INFO: Cleaning data...\n",
-      "INFO: Total number of moves after cleaning: 86292\n",
+      "INFO: Total number of moves after cleaning: 149923\n",
       "INFO: Performing statistical tests...\n",
       "INFO: Generating plots and performing statistical tests...\n"
      ]
@@ -751,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
