Improvement of TimePressure

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import sys\n",
     "import logging\n",
     "import math\n",
+    "from enum import Enum\n",
     "\n",
     "# Configure logging to print to stdout\n",
     "logging.basicConfig(\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +67,9 @@
     "        return int(value)\n",
     "    except (ValueError, TypeError):\n",
     "        return default\n",
+    "\"\"\"\n",
+    "Setting up Time Functions\n",
+    "\"\"\"\n",
     "\n",
     "def parse_clock_time(comment):\n",
     "    match = re.search(r'\\[%clk (\\d+):(\\d+):(\\d+)\\]', comment)  # Adjust regex if needed\n",
@@ -75,6 +79,55 @@
     "        seconds = int(match.group(3))\n",
     "        return hours * 3600 + minutes * 60 + seconds  # Total seconds\n",
     "    return None\n",
+    "\n",
+    "## Determine if a player is under time pressure based on van Harreveld et al. (2007) criteria ---\n",
+    "\n",
+    "def is_under_time_pressure(time_remaining, initial_time, time_spent):\n",
+    "    if any(x is None for x in [time_remaining,initial_time, time_spent]):\n",
+    "        return None\n",
+    "\n",
+    "    absolute_pressure = time_remaining < 30,\n",
+    "    relative_pressure = (time_remaining / initial_time) < 0.1 if initial_time else False,\n",
+    "    ratio_pressure = (time_spent / time_remaining > 0.3) if time_remaining else False,\n",
+    "\n",
+    "    return absolute_pressure or relative_pressure or ratio_pressure\n",
+    "\n",
+    "class TimeControlType(Enum):\n",
+    "    CLASSICAL = \"Classical\"\n",
+    "    RAPID = \"Rapid\"\n",
+    "    BLITZ = \"Blitz\"\n",
+    "    BULLET = \"Bullet\"\n",
+    "    UNKNOWN = \"Unknown\"\n",
+    "\n",
+    "#Parsing and Categorizing Time Control\n",
+    "def parse_time_control(time_control):\n",
+    "    if not time_control or time_control == \"unknown\":\n",
+    "        return None, None, TimeControlType.UNKNOWN\n",
+    "    try:\n",
+    "        if \"+\" in time_control:\n",
+    "            base, increment = time_control.split(\"+\")\n",
+    "            base_minutes = int(base)\n",
+    "            increment_seconds = int(increment)\n",
+    "        else:\n",
+    "            base_minutes = int(time_control)\n",
+    "            increment_seconds = 0\n",
+    "        \n",
+    "        initial_time_seconds = base_minutes * 60\n",
+    "\n",
+    "        if base_minutes >= 3600:\n",
+    "            category = TimeControlType.CLASSICAL\n",
+    "        elif base_minutes >= 600:\n",
+    "            category = TimeControlType.RAPID\n",
+    "        elif base_minutes >= 180:\n",
+    "            category = TimeControlType.BLITZ\n",
+    "        else:\n",
+    "            category = TimeControlType.BULLET\n",
+    "\n",
+    "        return initial_time_seconds, increment_seconds, category\n",
+    "\n",
+    "    except (ValueError, TypeError):\n",
+    "        return None, None, TimeControlType.UNKNOWN\n",
+    "\n",
     "\n",
     "def parse_evaluation(comment):\n",
     "    match = re.search(r'%eval\\s([+-]?\\d+(\\.\\d+)?)', comment)\n",
@@ -209,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "Game Processing Functions"
@@ -277,7 +330,7 @@
    },
    "outputs": [],
    "source": [
-    "def fetch_lichess_games(username, max_games=2000):  # Increase max_games\n",
+    "def fetch_lichess_games(username, max_games=20):  # Increase max_games\n",
     "    url = f\"https://lichess.org/api/games/user/{username}\"\n",
     "    params = {\n",
     "        \"max\": max_games,\n",
@@ -368,6 +421,7 @@
     "            white_elo = safe_int(game.headers.get(\"WhiteElo\", None))\n",
     "            black_elo = safe_int(game.headers.get(\"BlackElo\", None))\n",
     "            time_control = game.headers.get(\"TimeControl\", \"Unknown\")\n",
+    "            initial_time, increment, time_category = parse_time_control(time_control)\n",
     "\n",
     "            node = game\n",
     "            move_number = 0\n",
@@ -397,15 +451,24 @@
     "                move_number += 1\n",
     "                player = \"White\" if board.turn else \"Black\"\n",
     "\n",
-    "                # Extract clock time and evaluation from comments\n",
+    "                # Extract clock eval from PGN comments\n",
     "                comment = next_node.comment\n",
     "                time_remaining = parse_clock_time(comment)\n",
     "                evaluation = parse_evaluation(comment)\n",
     "\n",
-    "                # For debugging, print the time and evaluation variables\n",
-    "                # print(f\"Move {move_number}:\")\n",
-    "                # print(f\"prev_time_remaining: {prev_time_remaining}, time_remaining: {time_remaining}\")\n",
-    "                # print(f\"prev_evaluation: {prev_evaluation}, evaluation: {evaluation}\\n\")\n",
+    "                #TimeCalc\n",
+    "                if time_remaining is not None and prev_time_remaining is not None:\n",
+    "                    time_spent = prev_time_remaining - time_remaining\n",
+    "                    if time_spent < 0:\n",
+    "                        time_spent = None\n",
+    "                else:\n",
+    "                    time_spent = None\n",
+    "                #TimePressure\n",
+    "                under_pressure = is_under_time_pressure(\n",
+    "                    time_remaining=time_remaining,\n",
+    "                    initial_time=initial_time,  # From parse_time_control() we added earlier\n",
+    "                    time_spent=time_spent\n",
+    "                )\n",
     "\n",
     "                # Calculate winning chances\n",
     "                winning_chances = eval_winning_chances(evaluation)\n",
@@ -482,6 +545,11 @@
     "                    'Evaluation': evaluation,\n",
     "                    'EvalChange': eval_change,\n",
     "                    'ErrorCategory': error_category,\n",
+    "                    'TimeControl': time_control,\n",
+    "                    'TimeControlCategory': time_category.value,\n",
+    "                    'UnderTimePressure' : under_pressure,\n",
+    "                    'InitialTimeSeconds': initial_time,\n",
+    "                    'IncrementSeconds': increment,\n",
     "                    'TimeRemaining': time_remaining,\n",
     "                    'TimeSpent': time_spent,\n",
     "                    'MaterialDiff': material_diff,\n",
@@ -689,7 +757,7 @@
     "adhd_games = []\n",
     "for username in ADHD_USERNAMES:\n",
     "    logging.info(f\"Fetching games for user '{username}'...\")\n",
-    "    user_games = fetch_lichess_games(username, max_games=2000)  # Adjust max_games as needed\n",
+    "    user_games = fetch_lichess_games(username, max_games=20)  # Adjust max_games as needed\n",
     "    adhd_games.extend(user_games)\n",
     "\n",
     "if not adhd_games:\n",
@@ -720,7 +788,7 @@
     "            logging.error(f\"PGN file not found at path: {GENERAL_PGN_FILE_PATH}\")\n",
     "            general_games = []\n",
     "        else:\n",
-    "            general_games = process_pgn_file(GENERAL_PGN_FILE_PATH, max_games=2000)  # Adjust max_games as needed\n",
+    "            general_games = process_pgn_file(GENERAL_PGN_FILE_PATH, max_games=20)  # Adjust max_games as needed\n",
     "        \n",
     "        if not general_games:\n",
     "            logging.warning(\"No General population games to process.\")\n",
@@ -755,35 +823,60 @@
     "        all_moves_df = all_moves_df.dropna(subset=numeric_columns)\n",
     "\n",
     "        # After cleaning, output the number of moves remaining\n",
-    "        logging.info(f\"Total number of moves after cleaning: {len(all_moves_df)}\")\n",
-    "\n",
-    "        # ----------------------- 6. Statistical Testing -----------------------\n",
-    "        \n",
-    "        logging.info(\"Performing statistical tests...\")\n",
-    "        test_results = []\n",
-    "        \n",
-    "        # ----------------------- 7. Analysis and Plotting -----------------------\n",
-    "\n",
-    "        #these functions currently make no sense, and I need to work on plots - what actually I want displayed\n",
-    "    \n",
-    "        \n",
-    "        logging.info(\"Generating plots and performing statistical tests...\")"
+    "        logging.info(f\"Total number of moves after cleaning: {len(all_moves_df)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (2456860323.py, line 84)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "performance analysis under time pressure:\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'groups' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[41], line 84\u001b[0;36m\u001b[0m\n\u001b[0;31m    logging.info(\"\\n----------------------- Statistical Test Results -----------------------\\n\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperformance analysis under time pressure:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m:\n\u001b[1;32m     13\u001b[0m     group_data \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39m group]\n\u001b[1;32m     15\u001b[0m     normal \u001b[38;5;241m=\u001b[39m group_data[group_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnderTimePressure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'groups' is not defined"
      ]
     }
    ],
+   "source": [
+    "\"\"\"\n",
+    "Statistical Analysis\n",
+    "\"\"\"\n",
+    "\n",
+    "def analyze_adhd_time_pressure(df):\n",
+    "    groups = ['ADHD', 'General']\n",
+    "    conditions = [True, False]\n",
+    "\n",
+    "print(\"performance analysis under time pressure:\")\n",
+    "print(\"-\"*50)\n",
+    "\n",
+    "for group in groups:\n",
+    "    group_data = df[df['Group']== group]\n",
+    "\n",
+    "    normal = group_data[group_data['UnderTimePressure'] == False]\n",
+    "    pressure = group_data[group_data['UnderTimePresure'] == True]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#%%\n",
     "import matplotlib.pyplot as plt\n",
@@ -861,6 +954,7 @@
     "    plt.show()\n",
     "    # Placeholder test result\n",
     "    test_results.append({'Variable': 'Elo Stratification', 'Test': 'Elo Distribution', 'Statistic': 4.56, 'p-value': 0.05})\n",
+    "\n",
     "\n",
     "# These functions now generate basic plots for each respective analysis and add placeholder test results.\n",
     "# This will allow the rest of the notebook to execute without errors.\n",
