--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": [
      "Game Processing Functions"
@@ -572,7 +572,6 @@
     "        logging.error(f\"Failed to read PGN file '{pgn_file_path}': {e}\")\n",
     "    return games\n",
     "\n",
-    "\n",
     "def process_games(games, group_label, engine, max_depth=2):\n",
     "    all_moves = []\n",
     "    for game in tqdm(games, desc=f\"Processing {group_label} games\"):\n",
@@ -624,7 +623,7 @@
     "                \n",
     "                # Determine ADHD status for this specific move\n",
     "                is_adhd_move = (player == \"White\" and white_has_adhd) or \\\n",
-    "                              (player == \"Black\" and black_has_adhd)\n",
+    "                               (player == \"Black\" and black_has_adhd)\n",
     "\n",
     "                # Extract clock eval from PGN comments\n",
     "                comment = next_node.comment\n",
@@ -692,45 +691,55 @@
     "                # Categorize position complexity based on previous evaluation\n",
     "                position_complexity = categorize_position_complexity(prev_evaluation)\n",
     "\n",
-    "                # Move condition\n",
+    "                # Move condition (set it if you have logic for this; here just 'Unknown')\n",
     "                move_condition = \"Unknown\"\n",
     "\n",
-    "                # Append move data to the list\n",
     "                move_data = {\n",
+    "                    # Game Metadata\n",
     "                    'GameID': game_id,\n",
     "                    'Event': event,\n",
     "                    'Date': date,\n",
+    "                    'Result': result,\n",
+    "\n",
+    "                    # Player Information\n",
     "                    'White': white,\n",
     "                    'Black': black,\n",
-    "                    'Result': result,\n",
     "                    'WhiteElo': white_elo,\n",
     "                    'BlackElo': black_elo,\n",
-    "                    'TimeControl': time_control,\n",
+    "                    'ADHDPlayer': white if white_has_adhd else (black if black_has_adhd else None),\n",
+    "\n",
+    "                    # Move Specific\n",
     "                    'MoveNumber': move_number,\n",
-    "                    'Player': player,\n",
+    "                    'Player': player,  # Current player (White/Black)\n",
     "                    'SAN': san,\n",
+    "                    'GamePhase': game_phase,\n",
+    "                    'IsADHDMove': is_adhd_move,\n",
+    "\n",
+    "                    # Position Evaluation\n",
     "                    'Evaluation': evaluation,\n",
     "                    'EvalChange': eval_change,\n",
     "                    'ErrorCategory': error_category,\n",
+    "                    'PositionComplexity': position_complexity,\n",
+    "                    'MaterialDiff': material_diff,\n",
+    "                    'IsSacrifice': is_sacrifice,\n",
+    "\n",
+    "                    # Time Management\n",
+    "                    'TimeControl': time_control,\n",
     "                    'TimeControlCategory': time_category.value,\n",
-    "                    'UnderTimePressure': under_pressure,\n",
     "                    'InitialTimeSeconds': initial_time,\n",
     "                    'IncrementSeconds': increment,\n",
     "                    'TimeRemaining': time_remaining,\n",
     "                    'TimeSpent': time_spent,\n",
-    "                    'MaterialDiff': material_diff,\n",
-    "                    'IsSacrifice': is_sacrifice,\n",
-    "                    'GamePhase': game_phase,\n",
-    "                    'PositionComplexity': position_complexity,\n",
-    "                    'MoveCondition': move_condition,\n",
-    "                    'IsADHDMove': is_adhd_move,\n",
-    "                    'ADHDPlayer': white if white_has_adhd else (black if black_has_adhd else None),\n",
-    "                    'Group': 'ADHD' if is_adhd_move else 'Control'\n",
+    "                    'UnderTimePressure': under_pressure,\n",
+    "\n",
+    "                    # Analysis Group\n",
+    "                    'Group': 'ADHD' if is_adhd_move else 'Control',\n",
+    "                    'MoveCondition': move_condition\n",
     "                }\n",
     "\n",
     "                all_moves.append(move_data)\n",
     "\n",
-    "                # Update previous values for next iteration\n",
+    "                # Update previous values\n",
     "                prev_evaluation = evaluation\n",
     "                prev_time_remaining = time_remaining\n",
     "                current_material = new_material\n",
@@ -741,10 +750,20 @@
     "            print(f\"Error processing game {game_id}: {e}\")\n",
     "            continue\n",
     "\n",
-    "    # Convert the list of moves into a DataFrame and return it\n",
     "    moves_df = pd.DataFrame(all_moves)\n",
     "    return moves_df\n",
-    "\n"
+    "\n",
+    "# If you want to specify a particular column order, you can reorder the DataFrame after creation.\n",
+    "column_order = [\n",
+    "    'GameID', 'Event', 'Date', 'Result',\n",
+    "    'White', 'Black', 'WhiteElo', 'BlackElo', 'ADHDPlayer',\n",
+    "    'MoveNumber', 'Player', 'SAN', 'GamePhase', 'IsADHDMove',\n",
+    "    'Evaluation', 'EvalChange', 'ErrorCategory', 'PositionComplexity',\n",
+    "    'MaterialDiff', 'IsSacrifice',\n",
+    "    'TimeControl', 'TimeControlCategory', 'InitialTimeSeconds',\n",
+    "    'IncrementSeconds', 'TimeRemaining', 'TimeSpent', 'UnderTimePressure',\n",
+    "    'Group', 'MoveCondition'\n",
+    "]\n"
    ]
   },
   {
@@ -829,9 +848,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "performance analysis under time pressure:\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'groups' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperformance analysis under time pressure:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m:\n\u001b[1;32m     13\u001b[0m     group_data \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39m group]\n\u001b[1;32m     15\u001b[0m     normal \u001b[38;5;241m=\u001b[39m group_data[group_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnderTimePressure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'groups' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Statistical Analysis\n",
