Deleted little analysis function at tope to get code to work - some sort of error with *50

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "Game Processing Functions"
@@ -768,9 +768,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Fetching games for user 'teoeo'...\n",
+      "INFO: Fetched 2 games with evaluations for user 'teoeo'.\n",
+      "INFO: Fetching games for user 'Tobermorey'...\n",
+      "INFO: Fetched 1 games with evaluations for user 'Tobermorey'.\n",
+      "INFO: Fetching games for user 'apostatlet'...\n",
+      "INFO: Fetched 1 games with evaluations for user 'apostatlet'.\n",
+      "INFO: Fetching games for user 'LovePump1000'...\n",
+      "INFO: Fetched 3 games with evaluations for user 'LovePump1000'.\n",
+      "INFO: Fetching games for user 'Stuntmanandy'...\n",
+      "INFO: Fetched 1 games with evaluations for user 'Stuntmanandy'.\n",
+      "INFO: Fetching games for user 'Banfy_B'...\n",
+      "WARNING: Failed to fetch games for user 'Banfy_B'. Status code: 404\n",
+      "INFO: Fetching games for user 'ChessyChesterton12'...\n",
+      "INFO: Fetched 8 games with evaluations for user 'ChessyChesterton12'.\n",
+      "INFO: Fetching games for user 'Yastoon'...\n",
+      "INFO: Fetched 7 games with evaluations for user 'Yastoon'.\n",
+      "INFO: Fetching games for user 'Timy1976'...\n",
+      "WARNING: Failed to fetch games for user 'Timy1976'. Status code: 404\n",
+      "INFO: Fetching games for user 'SonnyDayz11'...\n",
+      "INFO: Fetched 2 games with evaluations for user 'SonnyDayz11'.\n",
+      "INFO: Fetching games for user 'xiroir'...\n",
+      "INFO: Fetched 13 games with evaluations for user 'xiroir'.\n",
+      "INFO: Initialized Stockfish engine at '/opt/homebrew/bin/stockfish'.\n",
+      "INFO: Processing ADHD players' games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing ADHD games: 100%|██████████| 38/38 [00:00<00:00, 698.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging ADHD GAMES PROCESSING\n",
+      "INFO: Fetching general population games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Successfully read 20 games with evaluations from PGN file '/Users/benjaminrosales/Desktop/Chess Study Materials & Data/Comparison Games/lichess_db_standard_rated_2017-05.pgn'.\n",
+      "INFO: Processing general population games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing General games: 100%|██████████| 20/20 [00:00<00:00, 754.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Debugging GENERAL GAMES PROCESSING\n",
+      "INFO: Combining datasets...\n",
+      "INFO: Debugging COMBINED DATASET\n",
+      "INFO: Cleaning data...\n",
+      "INFO: Total number of moves after cleaning: 1886\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# ----------------------- 1. Fetch and Process ADHD Players' Games -----------------------\n",
     "\n",
@@ -848,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +952,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperformance analysis under time pressure:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m:\n\u001b[1;32m     13\u001b[0m     group_data \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39m group]\n\u001b[1;32m     15\u001b[0m     normal \u001b[38;5;241m=\u001b[39m group_data[group_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnderTimePressure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m]\n",
+      "Cell \u001b[0;32mIn[6], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperformance analysis under time pressure:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m:\n\u001b[1;32m     13\u001b[0m     group_data \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39m group]\n\u001b[1;32m     15\u001b[0m     normal \u001b[38;5;241m=\u001b[39m group_data[group_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnderTimePressure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m]\n",
       "\u001b[0;31mNameError\u001b[0m: name 'groups' is not defined"
      ]
     }
